--- a/index.html
+++ b/index.html
@@ -336,54 +336,85 @@
       <div class="sweetMessageList__message">
         <!-- item click >> remove alert 아니면 삭제 버튼을 만들까?? -->
         <div class="message__item">
-          <h3 class="item__name">친구</h3>
           <div class="item__content">
-            축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하
+            축하축하축하축하축하축하축축하축하축하축하축하
+          </div>
+          <div class="item__info">
+            <h3 class="item__name">친구</h3>
+            <div class="item__wrap_delete">
+              <button class="wrap_delete__delete">삭제</button>
+            </div>
           </div>
         </div>
         <div class="message__item">
-          <h3 class="item__name">친구1</h3>
           <div class="item__content">
-            축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하
+            축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하
+          </div>
+          <div class="item__info">
+            <h3 class="item__name">친구1</h3>
+            <div class="item__wrap_delete">
+              <button class="wrap_delete__delete">삭제</button>
+            </div>
           </div>
         </div>
         <div class="message__item">
-          <h3 class="item__name">친구2</h3>
           <div class="item__content">
-            축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하
+            축하축하축하축하축하축하축하축하축하축하축하축축하축하축하축하축하축하
+          </div>
+          <div class="item__info">
+            <h3 class="item__name">친구2</h3>
+            <div class="item__wrap_delete">
+              <button class="wrap_delete__delete">삭제</button>
+            </div>
           </div>
         </div>
         <div class="message__item">
-          <h3 class="item__name">친구3</h3>
           <div class="item__content">
-            축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하
+            축하축하축하축하하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하
+          </div>
+          <div class="item__info">
+            <h3 class="item__name">친구3</h3>
+            <div class="item__wrap_delete">
+              <button class="wrap_delete__delete">삭제</button>
+            </div>
           </div>
         </div>
         <div class="message__item">
-          <h3 class="item__name">친구4</h3>
           <div class="item__content">
-            축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하
+            축축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하
+          </div>
+          <div class="item__info">
+            <h3 class="info__name">친구4</h3>
+            <div class="item__wrap_delete">
+              <button class="wrap_delete__delete">삭제</button>
+            </div>
           </div>
         </div>
         <div class="message__item">
-          <h3 class="item__name">친구5</h3>
           <div class="item__content">
-            축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하
+            축하축하축
+          </div>
+          <div class="item__info">
+            <h3 class="item__name">친구5</h3>
+            <div class="item__wrap_delete">
+              <button class="wrap_delete__delete">삭제</button>
+            </div>
           </div>
         </div>
         <div class="message__item">
-          <h3 class="item__name">친구6</h3>
           <div class="item__content">
-            축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하축하
+            축하축하하축하축하축하축하축하축하축하축하축하축하
+          </div>
+          <div class="item__info">
+            <h3 class="item__name">친구6</h3>
+            <div class="item__wrap_delete">
+              <button class="wrap_delete__delete">삭제</button>
+            </div>
           </div>
         </div>
       </div>
-      <div class="sweetMessageList__paging">
-        <div class="paging__item"></div>
-        <div class="paging__item"></div>
-        <div class="paging__item"></div>
-        <div class="paging__item"></div>
-        <div class="paging__item"></div>
+      <div class="sweetMessageList__bar">
+        <div class="bar__percent"></div>
       </div>
     </section>
 
