컴퓨터 기준으로 html css 완료

--- a/index.html
+++ b/index.html
@@ -422,14 +422,20 @@
     <section id="sweetMessageWrite">
       <h1 class="sweetMessageWrite__title">Write</h1>
       <div class="sweetMessageWrite__form">
-        <input type="text" class="form__name" placeholder="이름" />
-        <input type="password" class="form__password" placeholder="비밀번호" />
-        <!-- style="resize: none;" -->
-        <textarea
-          placeholder="내용을 입력해주세요."
-          class="form__content"
-        ></textarea>
-        <button class="form__writeMessage">등록</button>
+        <div class="form_wrap">
+          <input type="text" class="form__name" placeholder="이름" />
+          <input
+            type="password"
+            class="form__password"
+            placeholder="비밀번호"
+          />
+          <!-- style="resize: none;" -->
+          <textarea
+            placeholder="내용을 입력해주세요."
+            class="form__content"
+          ></textarea>
+          <button class="form__writeMessage">등록</button>
+        </div>
       </div>
     </section>
   </body>
